// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Button-js Large 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="storybook-button storybook-button--large storybook-button--secondary"
    style=""
    type="button"
  >
    Button
  </button>
</section>
`;

exports[`Storyshots Example/Button-js Primary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="storybook-button storybook-button--medium storybook-button--primary"
    style=""
    type="button"
  >
    Button
  </button>
</section>
`;

exports[`Storyshots Example/Button-js Secondary 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="storybook-button storybook-button--medium storybook-button--secondary"
    style=""
    type="button"
  >
    Button
  </button>
</section>
`;

exports[`Storyshots Example/Button-js Small 1`] = `
<section
  class="storybook-snapshot-container"
>
  <button
    class="storybook-button storybook-button--small storybook-button--secondary"
    style=""
    type="button"
  >
    Button
  </button>
</section>
`;
